# duckduckgo-mcp

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE.md  Dockerfile  MANUAL_CLI_TEST_REPORT.md  MANUAL_TESTING_VERIFICATION.md  README.md  SUBTASK_2.2_VERIFICATION_SUMMARY.md  SUBTASK_2.3_COMPLETION_SUMMARY.md  SUBTASK_4.3_COMPLETION.md  TEXT_FORMAT_VERIFICATION.md  manual_test_simple.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  smithery.yaml  uvx.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
skills/competitive-intel/: SKILL.md
skills/fact-check/: SKILL.md
skills/news-monitor/: SKILL.md
skills/tech-advisor/: SKILL.md
skills/tech-radar/: SKILL.md
skills/web-research/: SKILL.md
src/duckduckgo_mcp/: _version.py  cli.py  duckduckgo_news.py  duckduckgo_search.py  exceptions.py  jina_fetch.py
src/web_forager/: __init__.py  __main__.py  _version.py  cli.py  server.py  web_fetch.py
tests/: __init__.py  test_cli_errors.py  test_duckduckgo_search.py  test_exceptions.py  test_jina_fetch_errors.py  test_search_errors.py
